[gd_scene load_steps=12 format=2]

[ext_resource path="res://PNGs/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/global.gd" type="Script" id=3]
[ext_resource path="res://Scripts/NationCollision.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Nation.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Unit.gd" type="Script" id=6]
[ext_resource path="res://Scripts/BuildMenu.gd" type="Script" id=7]
[ext_resource path="res://PNGs/DandEMapFixed.png" type="Texture" id=8]
[ext_resource path="res://CameraMovement.gd" type="Script" id=9]
[ext_resource path="res://Nations.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.3906, 10 )

[node name="main" type="Node2D"]
script = ExtResource( 9 )

[node name="DandEMapFixed" type="Sprite" parent="."]
position = Vector2( 472.977, 330.137 )
scale = Vector2( 2.02266, 2.02266 )
texture = ExtResource( 8 )

[node name="Clicker2" type="Area2D" parent="."]
position = Vector2( 277.785, 407.472 )
script = ExtResource( 4 )

[node name="EllaSinks" type="CollisionShape2D" parent="Clicker2"]
position = Vector2( 134.538, -331.324 )
scale = Vector2( 2.24596, 2.42977 )
shape = SubResource( 1 )
script = ExtResource( 5 )

[node name="EllaToilet" type="CollisionShape2D" parent="Clicker2"]
position = Vector2( 232.561, -331.324 )
scale = Vector2( 1.11844, 2.5537 )
shape = SubResource( 1 )
script = ExtResource( 5 )

[node name="EllaSink" type="CollisionShape2D" parent="Clicker2"]
position = Vector2( 318.88, -331.324 )
scale = Vector2( 1.82502, 2.57811 )
shape = SubResource( 1 )
script = ExtResource( 5 )

[node name="EllaBRDoor" type="CollisionShape2D" parent="Clicker2"]
position = Vector2( 130.215, -255.472 )
scale = Vector2( 2.02775, 2.47671 )
shape = SubResource( 1 )
script = ExtResource( 5 )

[node name="EllaBRDoor_0" type="CollisionShape2D" parent="Clicker2"]
position = Vector2( 131.976, -287.472 )
scale = Vector2( 2.09513, 1.72565 )
shape = SubResource( 1 )

[node name="EllaBRMiddle" type="CollisionShape2D" parent="Clicker2"]
position = Vector2( 232.561, -268.935 )
scale = Vector2( 1.35406, 3.54649 )
shape = SubResource( 1 )
script = ExtResource( 5 )

[node name="EllaBRMiddle_0" type="CollisionShape2D" parent="Clicker2"]
position = Vector2( 273.933, -241.44 )
scale = Vector2( 1.31275, 1.04104 )
shape = SubResource( 1 )
script = ExtResource( 5 )

[node name="EllaBRMiddle_1" type="CollisionShape2D" parent="Clicker2"]
position = Vector2( 270.176, -271.317 )
rotation = -0.785397
scale = Vector2( 0.517662, 3.71385 )
shape = SubResource( 1 )
script = ExtResource( 5 )

[node name="EllaBRMiddle_2" type="CollisionShape2D" parent="Clicker2"]
position = Vector2( 215.16, -266.035 )
rotation = 0.261799
scale = Vector2( 0.991026, 3.43523 )
shape = SubResource( 1 )
script = ExtResource( 5 )

[node name="Player1" type="Node2D" parent="." groups=[
"Player",
]]
modulate = Color( 0.380392, 0.470588, 0.886275, 1 )
script = ExtResource( 2 )
playerControlled = true

[node name="Player2" type="Node2D" parent="." groups=[
"Player",
]]
modulate = Color( 0.717647, 0.184314, 0.184314, 1 )
script = ExtResource( 2 )

[node name="global" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="BuildMenu" type="Node2D" parent="." groups=[
"BuildMenu",
]]
visible = false
script = ExtResource( 7 )

[node name="Factories" type="Button" parent="BuildMenu"]
margin_right = 12.0
margin_bottom = 20.0
rect_scale = Vector2( 1.0317, 1.0317 )
text = "Factories: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit0" type="Node2D" parent="." groups=[
"Unit",
]]
visible = false
position = Vector2( 277.701, 345.101 )
script = ExtResource( 6 )

[node name="Button" type="Button" parent="Unit0"]
margin_left = -6.63422
margin_top = -19.9027
margin_right = 5.36578
margin_bottom = 0.0973206
rect_scale = Vector2( 1.04278, 2.06362 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitIcon" type="Sprite" parent="Unit0"]
scale = Vector2( 0.173683, -0.619442 )
texture = ExtResource( 1 )

[node name="UnitCount" type="Label" parent="Unit0"]
margin_left = -4.96863
margin_top = -43.4286
margin_right = 35.0314
margin_bottom = -29.4286
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit1" type="Node2D" parent="." groups=[
"Unit",
]]
visible = false
position = Vector2( 140.9, 151.301 )
script = ExtResource( 6 )

[node name="Button" type="Button" parent="Unit1"]
margin_left = -6.63422
margin_top = -19.9027
margin_right = 5.36578
margin_bottom = 0.0973206
rect_scale = Vector2( 1.04278, 2.06362 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitIcon" type="Sprite" parent="Unit1"]
scale = Vector2( 0.173683, -0.619442 )
texture = ExtResource( 1 )

[node name="UnitCount" type="Label" parent="Unit1"]
margin_left = -4.96863
margin_top = -43.4286
margin_right = 35.0314
margin_bottom = -29.4286
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit2" type="Node2D" parent="." groups=[
"Unit",
]]
visible = false
position = Vector2( 367.951, 78.1502 )
script = ExtResource( 6 )

[node name="Button" type="Button" parent="Unit2"]
margin_left = -6.63422
margin_top = -19.9027
margin_right = 5.36578
margin_bottom = 0.0973206
rect_scale = Vector2( 1.04278, 2.06362 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitIcon" type="Sprite" parent="Unit2"]
scale = Vector2( 0.173683, -0.619442 )
texture = ExtResource( 1 )

[node name="UnitCount" type="Label" parent="Unit2"]
margin_left = -4.96863
margin_top = -43.4286
margin_right = 35.0314
margin_bottom = -29.4286
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit3" type="Node2D" parent="." groups=[
"Unit",
]]
visible = false
position = Vector2( 719.452, 72.4502 )
script = ExtResource( 6 )

[node name="Button" type="Button" parent="Unit3"]
margin_left = -6.63422
margin_top = -19.9027
margin_right = 5.36578
margin_bottom = 0.0973206
rect_scale = Vector2( 1.04278, 2.06362 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitIcon" type="Sprite" parent="Unit3"]
scale = Vector2( 0.173683, -0.619442 )
texture = ExtResource( 1 )

[node name="UnitCount" type="Label" parent="Unit3"]
margin_left = -4.96863
margin_top = -43.4286
margin_right = 35.0314
margin_bottom = -29.4286
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit4" type="Node2D" parent="." groups=[
"Unit",
]]
visible = false
position = Vector2( 668.152, 212.101 )
script = ExtResource( 6 )

[node name="Button" type="Button" parent="Unit4"]
margin_left = -6.63422
margin_top = -19.9027
margin_right = 5.36578
margin_bottom = 0.0973206
rect_scale = Vector2( 1.04278, 2.06362 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitIcon" type="Sprite" parent="Unit4"]
scale = Vector2( 0.173683, -0.619442 )
texture = ExtResource( 1 )

[node name="UnitCount" type="Label" parent="Unit4"]
margin_left = -4.96863
margin_top = -43.4286
margin_right = 35.0314
margin_bottom = -29.4286
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextTurnButton" type="Button" parent="."]
margin_left = 947.153
margin_top = 1.9
margin_right = 1021.15
margin_bottom = 21.9
text = "Next Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwapPlayerButton" type="Button" parent="."]
margin_left = 5.44153
margin_top = 572.719
margin_right = 98.4415
margin_bottom = 592.719
text = "Swap Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Node2D" parent="." groups=[
"Popup",
]]

[node name="Label" type="Label" parent="Popup"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 40.0
margin_bottom = 14.0
text = "TEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nations" parent="." instance=ExtResource( 10 )]
[connection signal="clickedNation" from="Clicker2" to="global" method="_on_NationClicker_clickedNation"]
[connection signal="pressed" from="BuildMenu/Factories" to="BuildMenu" method="_on_Factories_pressed"]
[connection signal="pressed" from="NextTurnButton" to="global" method="_on_NextTurnButton_pressed"]
[connection signal="pressed" from="SwapPlayerButton" to="global" method="_on_SwapPlayerButton_pressed"]
